[package]
name = "pe-loader-nostd"
version = "0.1.0"
edition = "2024"
authors = ["Matt Gates <suhteevah@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "no_std PE/COFF executable loader for Windows binaries in Rust"
repository = "https://github.com/suhteevah/pe-loader-nostd"
keywords = ["pe", "coff", "windows", "loader", "no_std"]
categories = ["no-std", "os"]
readme = "README.md"

[dependencies]
log = { version = "0.4", default-features = false }
spin = { version = "0.9", default-features = false }
